--- a/templates/root.my.cnf.erb
+++ b/templates/root.my.cnf.erb
@@ -1,4 +1,15 @@
-# File Managed by Puppet
-
 [client]
-password=<%= scope.lookupvar('mariadb::real_root_password') %>
+user=root
+password="<%= scope.lookupvar('mariadb::real_root_password') %>"
+
+[mysql]
+user=root
+password="<%= scope.lookupvar('mariadb::real_root_password') %>"
+
+[mysqldump]
+user=root
+password="<%= scope.lookupvar('mariadb::real_root_password') %>"
+
+[mysqldiff]
+user=root
+password="<%= scope.lookupvar('mariadb::real_root_password') %>"
