--- a/templates/root.my.cnf.erb
+++ b/templates/root.my.cnf.erb
@@ -1,15 +1,4 @@
+# File Managed by Puppet
+
 [client]
-user=root
-password="<%= scope.lookupvar('mariadb::real_root_password') %>"
-
-[mysql]
-user=root
-password="<%= scope.lookupvar('mariadb::real_root_password') %>"
-
-[mysqldump]
-user=root
-password="<%= scope.lookupvar('mariadb::real_root_password') %>"
-
-[mysqldiff]
-user=root
-password="<%= scope.lookupvar('mariadb::real_root_password') %>"
+password=<%= scope.lookupvar('mariadb::real_root_password') %>
